--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -227,7 +227,7 @@
         </li>
         <li>
           <a href="https://philosophy.stackexchange.com/q/300/23586">Is the “omniscient-omnipotent-omnipresent” definition of God consistent?</a>
-          This question was posted on Philosophy Stack Exchage in June 2011.
+          This question was posted on Philosophy Stack Exchange in June 2011.
         </li>
         <li>Law, Stephen:
           <a href="https://aeon.co/ideas/belief-in-supernatural-beings-is-totally-natural-and-false">Belief in supernatural beings is totally natural – and false</a>,
