Hide various sections

--- a/lijst.html
+++ b/lijst.html
@@ -24,12 +24,12 @@
     <h2>Navigation</h2>
     <ul>
       <li><a href="./index.html">Home</a></li>
-      <li><a href="./philscience/index.html">Philosophy of Science</a>
+      <li class="notyet"><a href="./philscience/index.html">Philosophy of Science</a>
         <ul>
           <li><a href="./philscience/fleck_ludwik.html" lang="de">Ludwig Fleck</a></li>
         </ul>
       </li>
-      <li><a href="./philosophy/index.html">Philosophy</a>
+      <li class="notyet"><a href="./philosophy/index.html">Philosophy</a>
         <ul>
           <li><a href="./philosophy/learningphilosophy.html">Learning Philosophy</a></li>
           <li><a href="../philosophy/thinking.html" title="Thinking, Including Critical Thinking">Thinking</a></li>
@@ -37,7 +37,7 @@
           <li><a href="./philosophy/hegel_gwf.html">G.W.F. Hegel</a></li>
         </ul>
       </li>
-      <li><a href="./science/index.html">Science</a>
+      <li class="notyet"><a href="./science/index.html">Science</a>
         <ul>
           <li><a href="./science/ioannidis.html" 
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
@@ -48,7 +48,7 @@
           <!--li><a href="./science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a></li-->
         </ul>
       </li>
-      <li><a href="./humanities/index.html">Humanities</a>
+      <li class="notyet"><a href="./humanities/index.html">Humanities</a>
         <ul>
           <li><a href="./humanities/girard_rene.html" lang="fr">René Girard</a></li>
           <li><a href="./humanities/the-one-whose-name-must-not-be-mentioned.html">The Unnamable One</a></li>
@@ -487,7 +487,7 @@
     </ul>
   </section>
 
-  <section id="thinking-reasoning">
+  <section class="perhapsnot" id="thinking-reasoning">
     <h2>Thinking and Reasoning</h2>
     <ul>
       <li class="perhapsnot">Bowker, Geoffrey C.; Star, Susan Leigh:
