Add: Hall:Classics for the people

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -1162,6 +1162,11 @@
           so that you are going to see those actions on a regular basis.</q>
           (<a href="https://www.youtube.com/watch?v=CHxhjDPKfbY">The Art of Stress-Free Productivity: David Allen at <abbr>TED</abbr>xClaremontColleges</a>.)
         </li>
+        <li>Hall, Edith:
+          <a href="https://aeon.co/essays/why-working-class-britons-loved-reading-and-debating-the-classics">Classics for the people / Why working-class Britons loved reading and debating the Classics</a>,
+          <i class="website">Aeon</i>, 13.11.2019.
+          <!--@@summarise-->
+        </li>
       </ul>
 
       <p>Organisations and initiative promoting the humanities:</p>
