Add: Learn Mathematics from START to FINISH

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -362,6 +362,61 @@
         <a href="https://www.youtube.com/watch?v=YzfdL58virc">How to Learn Mathematics Fast</a>
         (<i class="ytchannel">Siraj Raval</i> on YouTube, 11 minutes, 19.01.2018).
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=pTnEG_WGd2Q">Learn Mathematics from START to FINISH</a>
+        (<i class="ytchannel">The Math Sorcerer</i> on YouTube, 18 minutes, 09.12.2020).
+        <br />As a starting point, this video recommends the following books:
+        <i class="booktitle">Discrete Mathematics with Applications</i> by Susanna Epp (which requires no previous knowledge of algebra),
+        <i class="booktitle">Discrete Mathematical Structures</i> by Kolman, Busby and Ross,
+        <i class="booktitle">Mathematical Proofs: A Transition to Advanced Mathematics</i> by Chartrand, Polimeni and Zhang (which is much more advanced than the previous books, but you don't need to understand everything), and
+        <i class="booktitle">An Introduction to Abstract Mathematics</i> by Bond and Keane (which is also about proof writing).
+        <br />If you need to prepare for learning algebra, the video creator recommends
+        <i class="booktitle">Pre-Algebra</i> from <abbr>AGS</abbr> (which contains solutions) and
+        <i class="booktitle">Fearon's Pre-Algebra</i> (which does not contain solutions but which is otherwise very good).
+        <br />Next, you can pick <i class="booktitle">College Algebra</i> by Jerome E. Kaufmann
+        or <i class="booktitle">College Algebra Essentials</i> by Blitzer (which is somewhat less beginner friendly than Kaufmann's).
+        This could be followed by <i class="booktitle">A Graphical Approach to Algebra &amp; Trigonometry</i> by Hornsby, Lial and Rockswold (which is often used to teach pre-calculus and trigonometry in the <abbr>USA</abbr>; the instructor's edition also contains answers).
+        <br />For calculus, there is <i class="booktitle">Calculus</i> by James Stewart (which is popular in the <abbr>USA</abbr> and Canada and which contains many problems)
+        and <i class="booktitle">Calculus</i> by Michael Spivak (which contains less material than Stewart's book and is more advanced because it assumes more knowledge of set theory and proof writing).
+        <br />After these books, you can move on to <i class="booktitle">A First Course in Differential Equations (with Modeling Applications)</i> by Zill or
+        <i class="booktitle">Ordinary Differential Equations (With Applications)</i> by Larry C. Andrews (which is less popular but good for beginners).
+        Then you can progress to <i class="booktitle">Elementary Linear Algebra</i> Howard Anton (which is good for beginners),
+        <i class="booktitle">Linear Algebra</i> by Friedberg, Insel and Spence (which is more rigorous and harder and proof based) and
+        <i class="booktitle">Linear Algebra</i> by Serge Lang.
+        <br />After these books <q>the world is open</q> since you can now learn almost any mathematics that is taught at an undergraduate level.
+        <i class="booktitle">Mathematical Statistics with Applications</i> by Wackerly, Mendenhall and Scheaffer (which is very solid and requires calculus), and
+        <i class="booktitle">A First Course in Probability</i> by Sheldon Ross (which requires a bit of calculus).
+        You can also learn from
+        <i class="booktitle">Fundamentals of Complex Analysis with Applications to Engineering and Science</i> Saff and Snider, and
+        <i class="booktitle">Complex Variables and Applications</i> by Brown and Churchill.
+        <br />Real analysis is often considered the bane of math majors. For self study you can use (after learning linear algebra)
+        <i class="booktitle">Analysis I</i> and <i class="booktitle">II</i> by Terence Tao (which are very good for reading and contain good examples),
+        <i class="booktitle">Advanced Calculus: A Course in Mathematical Analysis</i> by Patrick M. Fitzpatrick (which is good for beginners in analysis) and
+        <i class="booktitle">Principles of Mathematical Analysis</i> by Walter Rudin.
+        <!-- https://www.mheducation.com/highered/product/principles-mathematical-analysis-rudin/007054235X.html -->
+        Also good: <i class="booktitle">Elementary Analysis: The Theory of Calculus</i> by Ross (which spends a lot of time on proofs).
+        <br /><i class="booktitle">Abstract Algebra: A First Course</i> by Dan Saracino and
+        <i class="booktitle">Contemporary Abstract Algebra</i> by Joseph Gallian, which are both proof based.
+        <br />Other topics you can take up: <i class="booktitle">Introduction to Topology</i> by Gamelin and Greene (which contains solutions, published by Dover Books and therefore cheap),
+        <i class="booktitle">Applied Combinatorics</i> by Alan Tucker (some of which was already covered by the books on discrete mathematics),
+        <i class="booktitle">Naive Set Theory</i> by Paul Halmos (the classic book on the subject, which is fairly short and very enjoyable),
+        <i class="booktitle">Introductory Functional Analysis with Applications</i> by Kreyszig (which requires familiarity with proofs) and
+        <i class="booktitle">Graph Theory</i> by Ronald Gould.
+        <br />For higher-level mathematics, see, for example,
+        <i class="booktitle">Real Analysis</i> by H. L. Royden and <i class="booktitle">Real and Complex Analysis</i> by Rudin (both of which are famous and difficult).
+        <br />Some other books not mentioned before are
+        <i class="booktitle">Linear Algebra</i> by Hoffman and Kunz (a classic book that was used at <abbr>MIT</abbr> and which is proof based),
+        <i class="booktitle">Algebra</i> by Michael Artin (which takes a linear-algebra approach to abstract algebra),
+        <i class="booktitle">Calculus Made Easy</i> by Thompson (which is very old and something you can read while lying in bed),
+        <i class="booktitle">Geometry</i> by Jurgensen, Brown and King (which covers basic geometry and can be learnt independently of the other topics in this video),
+        <i class="booktitle">Finite-Dimensional Vector Spaces</i> by Paul Halmos (a linear-algebra book),
+        <i class="booktitle">Linear Algebra</i> by Lipschutz and Lipson, and
+        <i class="booktitle">Linear Algebra and Its Applications</i> by Gilbert Strang.
+      </li>
+      <li>:
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
     </ul>
 
     <h2>Other Links</h2>
@@ -389,7 +444,25 @@
         <!--@@download?-->
       </li>
     </ul>
-
+  <!--
+  <section>
+    <h2></h2>
+    <ul>
+      <li>
+        <a href=""></a>,
+        <i class=""></i>,
+      </li>
+      <li>:
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+      <li>
+        <a href=""></a>
+        (<i class="ytchannel"></i> on YouTube, minutes, ).
+      </li>
+    </ul>
+  </section>
+  -->
   </main>
 
   <footer>
