Add: Jarry: Little-Known Acts of Skepticism and How to Join the Home Front for Science

--- a/science/index.html
+++ b/science/index.html
@@ -1536,6 +1536,15 @@
           <a href="https://en.wikipedia.org/wiki/Samir_Amin">Samir Amin (1931 – 2018)</a> (Wikipedia):
           Egyptian-French Marxian economist.
         </li>
+        <li>Jarry, Jonathan:
+          <a href="https://www.youtube.com/watch?v=N2bv9a-WFwM">Little-Known Acts of Skepticism and How to Join the Home Front for Science</a>
+          (<i class="ytchannel">Center for Inquiry</i> on YouTube, 26 minutes, 19.12.2019).
+          <br />Quoted from the video description:
+          <q>Jonathan Jarry is a science communicator with the McGill Office for Science and Society, dedicated to separating sense from nonsense on the scientific stage.
+          He brings his experience in cancer research, human genetics, rehabilitation research, and forensic biology to the work he does for the public.
+          He is the creator, writer, and host of the YouTube show Cracked Science, which uses a late-night deep-dive format to debunk pseudoscience and denounce bad science.
+          With cardiologist Dr. Christopher Labos, he co-hosts the award-winning medical podcast The Body of Evidence, which aims to contextualize findings in the realm of health research and answer the public's most pressing questions about the biomedical sciences while also being funny and entertaining.</q>
+        </li>
       </ul>
     </section>
     <!--
@@ -1544,6 +1553,10 @@
       <ul>
         <li>
           <a href=""></a>
+        </li>
+        <li>
+          <a href=""></a>
+          (<i class="ytchannel"></i> on YouTube,  minutes, ).
         </li>
         <li>:
           <i class="booktitle"></i>.
