Escape ampersands in URLs; other minor edits

--- a/science/index.html
+++ b/science/index.html
@@ -74,7 +74,7 @@
       <h2>YouTube Channels and Videos</h2>
       <ul>
         <li>Colin Frayn:
-          <a href="https://www.youtube.com/user/ColinFrayn/videos?flow=grid&view=0&sort=da">Understanding Science</a>:
+          <a href="https://www.youtube.com/user/ColinFrayn/videos?flow=grid&amp;view=0&amp;sort=da">Understanding Science</a>:
           a series over 40 videos (each between 10 and 40 minutes long) about various sciences
           and how science works.
         </li>
@@ -205,17 +205,17 @@
         <li>Zimring, James C.:
           <i class="booktitle">What Science Is and How It Really Works</i>.
           Cambridge University Press, 2019. (402 pages)
-          <a href="https://www.cambridge.org/de/academic/subjects/life-sciences/life-science-professional-development/what-science-and-how-it-really-works?format=PB&isbn=9781108701648"><abbr>ISBN</abbr> 9781108701648</a>.
+          <a href="https://www.cambridge.org/de/academic/subjects/life-sciences/life-science-professional-development/what-science-and-how-it-really-works?format=PB&amp;isbn=9781108701648"><abbr>ISBN</abbr> 9781108701648</a>.
         </li>
         <li>Gauch, Hugh G., Jr.:
           <i class="booktitle">Scientific Method in Brief</i>.
           Cambridge University Press, 2012. (303 pages)
-          <a href="https://www.cambridge.org/de/academic/subjects/life-sciences/life-science-professional-development/scientific-method-brief?format=PB&isbn=9781107666726"><abbr>ISBN</abbr> 9781107666726</a>.
+          <a href="https://www.cambridge.org/de/academic/subjects/life-sciences/life-science-professional-development/scientific-method-brief?format=PB&amp;isbn=9781107666726"><abbr>ISBN</abbr> 9781107666726</a>.
         </li>
         <li>Gauch, Hugh G., Jr.:
           <i class="booktitle">Scientific Method in Practice</i>.
           Cambridge University Press, 2002. (456 pages)
-          <a href="https://www.cambridge.org/de/academic/subjects/life-sciences/life-science-professional-development/scientific-method-practice?format=PB&isbn=9780521017084"><abbr>ISBN</abbr> 9780521017084</a>.
+          <a href="https://www.cambridge.org/de/academic/subjects/life-sciences/life-science-professional-development/scientific-method-practice?format=PB&amp;isbn=9780521017084"><abbr>ISBN</abbr> 9780521017084</a>.
         </li>
         <li>Good, Ron:
           <i class="booktitle">Scientific and Religious Habits of Mind: Irreconcilable Tensions in the Curriculum</i>.
@@ -255,7 +255,7 @@
       <h2 id="reading-papers">How to Read Papers and Other Scientific Literature</h2>
       <ul>
         <li>
-          <a href="https://www.quora.com/What-is-the-best-way-to-read-scientific-papers?share=1&redirected_qid=4360721">What is the best way to read scientific papers?</a>
+          <a href="https://www.quora.com/What-is-the-best-way-to-read-scientific-papers?share=1&amp;redirected_qid=4360721">What is the best way to read scientific papers?</a>
           (discussion on Quora).
         </li>
         <li>Raff, Jennifer:
@@ -505,8 +505,7 @@
     </section>
 
       <!--h2>Darwin and Evolutionary Theory</h2>
-      <p>There are several introductions and surveys of darwinism by philosophers.
-      </p>
+      <p>There are several introductions and surveys of darwinism by philosophers.</p>
       <ul>
         <li>Lewens, Tim:
           <span class="booktitle">Darwin</span>. Routledge Philosophers.
@@ -546,7 +545,7 @@
       <h2>Registering All Medical Trials</h2>
       <p>The British physician <a href="https://en.wikipedia.org/wiki/Ben_Goldacre">Ben Goldacre</a>
         founded the AllTrials campaign
-        <q cite="https://en.wikipedia.org/w/index.php?title=Ben_Goldacre&oldid=681819829">to require open science practices in clinical trials</q>.
+        <q cite="https://en.wikipedia.org/w/index.php?title=Ben_Goldacre&amp;oldid=681819829">to require open science practices in clinical trials</q>.
         See <strong><a href="http://www.alltrials.net/">www.alltrials.net</a></strong>.
         The AllTrials website explains
         <a href="http://www.alltrials.net/find-out-more/why-this-matters/">why this initiative matters</a>.
@@ -781,53 +780,53 @@
         </li>
       </ul>
     </section>
-    <!-- Mike Sutton: Spinach Iron Decimal Point Error Myth Busted. Tuesday, 21 December 2010: http://super-myths.blogspot.com.es/2010/12/spinach-iron-decimal-point-error-myth.html -->
-    <!-- We use only 5% / 10% of our brain, e.g. as claimed by By Eason: https://www.youtube.com/watch?v=4Qlu3TJLJX4 
+    <!--Mike Sutton: Spinach Iron Decimal Point Error Myth Busted. Tuesday, 21 December 2010: http://super-myths.blogspot.com.es/2010/12/spinach-iron-decimal-point-error-myth.html -->
+    <!--We use only 5% / 10% of our brain, e.g. as claimed by By Eason: https://www.youtube.com/watch?v=4Qlu3TJLJX4 
       Bo Eason even claims that a Harvard professor said (2'40'' - 3'04''): "The average human being uses 5% of their brain capacity. High achievers use 20% of their brain capacity. Olympic gold medalists use 40% of their brain capacity, because mastery is the highest form of intelligence."
 
-      Debunked at: 
+      Debunked at:
       * Association for Psychological Science: "Most People Use Only 10% of Their Brain Power": http://www.psychologicalscience.org/media/myths/myth_1.cfm (no date).
         From 50 Great Myths of Popular Psychology: Shattering Widespread Misconceptions about Human Behavior by Scott O. Lilienfeld, Steven Jay Lynn, John Ruscio, and Barry L. Beyerstein. Copyright © 2010 by Scott O. Lilienfeld, Steven Jay Lynn, John Ruscio, and Barry L. Beyerstein.  This material is reproduced with permission of John Wiley & Sons, Inc.
         -> Scott O. Lilienfeld, Steven Jay Lynn, John Ruscio, Barry L. Beyerstein : 50 Great Myths of Popular Psychology: Shattering Widespread Misconceptions about Human Behavior. Wiley-Blackwell, 2009. http://eu.wiley.com/WileyCDA/WileyTitle/productCd-EHEP002362.html
       * Richard E. Cytowic: "Using Only 10 Percent of Your Brain? Think Again! ", The Fallible Mind (blog), Psychology Today, 29.11.2012.
       * "We Only Use 10% of Our Brain Power", 10 of Psychology's Greatest Myths, RealClearScience, 04.02.14. "The myth likely stems back to American psychologist William James, who once espoused the idea that the average person rarely achieves more than 10% of their intellectual potential."
-      * "Lucy: Debunking the 10% Brain Myth", "Emory Looks at Hollywood" (w. Krish Sathian), Emory University: https://www.youtube.com/watch?v=Tt2dEep9vHA 
-      * Wikipedia: "Ten percent of the brain myth": https://en.wikipedia.org/wiki/Ten_percent_of_the_brain_myth (this is even referenced from the article about the film "Lucy": https://en.wikipedia.org/wiki/Lucy_%282014_film%29 ). 
+      * "Lucy: Debunking the 10% Brain Myth", "Emory Looks at Hollywood" (w. Krish Sathian), Emory University: https://www.youtube.com/watch?v=Tt2dEep9vHA
+      * Wikipedia: "Ten percent of the brain myth": https://en.wikipedia.org/wiki/Ten_percent_of_the_brain_myth (this is even referenced from the article about the film "Lucy": https://en.wikipedia.org/wiki/Lucy_%282014_film%29 ).
     -->
 
     <!-- John S. Wilkins: Species: The History of an Idea. University of California Press, 2011: http://www.ucpress.edu/book.php?isbn=9780520271395 -->
     <!-- * "INTRINSIC MOTIVATION DOESN'T EXIST, RESEARCHER SAYS", Ohio State University, 2005: http://researchnews.osu.edu/archive/inmotiv.htm
-          see also https://en.wikipedia.org/wiki/Motivation#Intrinsic_motivation_and_the_16_basic_desires_theory 
+          see also https://en.wikipedia.org/wiki/Motivation#Intrinsic_motivation_and_the_16_basic_desires_theory
           (Steven Reiss: https://en.wikipedia.org/wiki/Steven_Reiss )
          * Riedenauer & Tschirf: Zeitmanagement und Selbstorganisation in der Wissenschaft: Ein selbstbestimmtes Leben in Balance. facultas wuv, 2012.
-         * Marian Petre: The Unwritten Rules Of Phd Research. 2nd edition. Open University Press, 2010. 
+         * Marian Petre: The Unwritten Rules Of Phd Research. 2nd edition. Open University Press, 2010.
          * Patrick Dunleavy: Authoring a PhD: How to Plan, Draft, Write and Finish a Doctoral Thesis or Dissertation: How to Plan, Draft, Write and Finish a Doctoral Dissertation. Palgrave USA, 2003. ISBN 978-1403905840.
     -->
 
-    <!--@@ move to separate page on psychology: 
-      * GoCognitive: Educational tools for cognitive neuroscience: http://www.gocognitive.net/ & https://www.youtube.com/channel/UCUciTUAOsGaJiypoHHmZHuA 
+    <!--@@ move to separate page on psychology:
+      * GoCognitive: Educational tools for cognitive neuroscience: http://www.gocognitive.net/ & https://www.youtube.com/channel/UCUciTUAOsGaJiypoHHmZHuA
       Ego depletion in psychological research:
-      * SciShow: "Why an Entire Field of Psychology Is in Trouble" (9 minutes): https://www.youtube.com/watch?v=2MDNvKXdLEM 
+      * SciShow: "Why an Entire Field of Psychology Is in Trouble" (9 minutes): https://www.youtube.com/watch?v=2MDNvKXdLEM
     -->
     <!-- Scientific literacy; science & research policy (politians who lack scientific literary would not be able to define a good science & research policy
-      * Christine Gorman: "What Do the Presidential Candidates Know about Science?", Scientific American, 13.09.2016: http://www.scientificamerican.com/article/what-do-the-presidential-candidates-know-about-science/ 
+      * Christine Gorman: "What Do the Presidential Candidates Know about Science?", Scientific American, 13.09.2016: http://www.scientificamerican.com/article/what-do-the-presidential-candidates-know-about-science/
     -->
-    <!-- Climate science and commitment to pollution in the USA: 
+    <!-- Climate science and commitment to pollution in the USA:
       * 1 June 2017: Trumps announces that USA withdraws from Paris Agreement; quotes The Wall Street Journal as saying that
         "The reality is that withdrawing is in America's economic interest and won't matter much to the climate. The United States under the Trump administration
         will continue to be the cleanest and most environmentally friendly country on earth."
         https://youtu.be/Ulcj3gkAbLo?t=14m15s
-      * Mary Kissel & Holman Jenkins Jr.: "Opinion Journal: The Paris Climate Con" ("Business World Columnist Holman Jenkins Jr. on why the pact is mainly about subsidies, not environmental progress."), Wall Street Journal, 1 June 2017: 
-        http://www.wsj.com/video/opinion-journal-the-paris-climate-con/AF124BBD-86EB-40A7-A6D5-185AB8F6CC03.html?mod=trending_now_video_5 
-      * For comparison, see 
+      * Mary Kissel & Holman Jenkins Jr.: "Opinion Journal: The Paris Climate Con" ("Business World Columnist Holman Jenkins Jr. on why the pact is mainly about subsidies, not environmental progress."), Wall Street Journal, 1 June 2017:
+        http://www.wsj.com/video/opinion-journal-the-paris-climate-con/AF124BBD-86EB-40A7-A6D5-185AB8F6CC03.html?mod=trending_now_video_5
+      * For comparison, see
         - Obama on climate and national security (2015): "Obama talks Risks to National Security from Climate Change at US Coast Guard Academy 2015": https://www.youtube.com/watch?v=Is3n5JjU4N0
-        - George H. W. Bush on the environment (01.08.1988): https://www.youtube.com/watch?v=m7_6O5Z7_QE 
-      * Democracy Now!: 'Advocates: Trump Pulling Out of Paris Climate Accord Would Be "Suicide Note to the World"', 2 June 2016: https://www.youtube.com/watch?v=C0bHX24kR7w 
-      * "Steyer Calls Trump's Speech on Paris Accord 'Dishonest'", Bloomberg Politics, 1 June 2017: https://www.youtube.com/watch?v=POx4OGlCKEg 
+        - George H. W. Bush on the environment (01.08.1988): https://www.youtube.com/watch?v=m7_6O5Z7_QE
+      * Democracy Now!: 'Advocates: Trump Pulling Out of Paris Climate Accord Would Be "Suicide Note to the World"', 2 June 2016: https://www.youtube.com/watch?v=C0bHX24kR7w
+      * "Steyer Calls Trump's Speech on Paris Accord 'Dishonest'", Bloomberg Politics, 1 June 2017: https://www.youtube.com/watch?v=POx4OGlCKEg
         Points out that the choice between environment and economy/jobs is a false dichotomy. "destructive act against the American people".
-      * Paul Ratner: "Elon Musk Quits Trump's Councils in Protest", Big Think, 2 June 2017: http://bigthink.com/paul-ratner/elon-musk-quits-trumps-councils-in-protest-over-the-paris-agreement-pullout 
-      * PBS Newshour: "What leaving the Paris Accord could mean for U.S. and the world", 31 May 2017 (12 minutes): https://www.youtube.com/watch?v=ZR1snnEx6oI 
-        Even ExxonMobil was in favour of staying with the Paris agreement. 
+      * Paul Ratner: "Elon Musk Quits Trump's Councils in Protest", Big Think, 2 June 2017: http://bigthink.com/paul-ratner/elon-musk-quits-trumps-councils-in-protest-over-the-paris-agreement-pullout
+      * PBS Newshour: "What leaving the Paris Accord could mean for U.S. and the world", 31 May 2017 (12 minutes): https://www.youtube.com/watch?v=ZR1snnEx6oI
+        Even ExxonMobil was in favour of staying with the Paris agreement.
         According to Phil Kerpen (pres of the conservative org American Commitment), who is against the Paris agreement, the Philippines have withdrawn, India building too many coal plants to meet its targets.
         Princeton University's Michael Oppenheimer is in favour of the Paris agreement and points out how China is moving forward.
     -->
@@ -1566,7 +1565,6 @@
     </section>
     -->
   </main>
-
   <footer>
     <p class="licence">
       <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img 
