Add: Nippel: Karl Marx

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -241,6 +241,10 @@
             * Caldwell, Roger: "Why Marx Was Right by Terry Eagleton", Philosophy Now, 2013: https://philosophynow.org/issues/96/Why_Marx_Was_Right_by_Terry_Eagleton
           -->
         </li>
+        <li><span lang="de">Nippel, Wilfried:
+          <i class="booktitle">Karl Marx</i>. München: C. H. Beck,</span> 2018. (127 pages)
+          <!--<a href=""><abbr>ISBN</abbr> 978-3-406-71418-4</a>.-->
+        </li>
         <li>Fusaro, Diago<span lang="de">:
           <i class="booktitle">Schon wieder Marx. Die Wiederkehr der Revolution</i>.
           Übersetzt von Jenny Perelli. Westend Verlag</span>, 2018. (96 pages)
