Add: Fetscher: Marx. Eine Einführung

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -242,8 +242,13 @@
           -->
         </li>
         <li><span lang="de">Nippel, Wilfried:
-          <i class="booktitle">Karl Marx</i>. München: C. H. Beck,</span> 2018. (127 pages)
-          <!--<a href=""><abbr>ISBN</abbr> 978-3-406-71418-4</a>.-->
+          <i class="booktitle">Karl Marx</i>. München: C. H. Beck,</span> 2018. (128 pages)
+          <a href="https://www.chbeck.de/nippel-karl-marx/product/20530828"><abbr>ISBN</abbr> 978-3-406-71418-4</a>.
+        </li>
+        <li><span lang="de">Fetscher, Iring:
+          <i class="booktitle">Marx. Eine Einführung</i>. Suhrkamp,</span> 2018. (159 pages)
+          <a href="https://www.suhrkamp.de/buecher/marx-iring_fetscher_29855.html"><abbr>ISBN</abbr> 978-3-518-29855-8</a>.
+          <br />
         </li>
         <li>Fusaro, Diago<span lang="de">:
           <i class="booktitle">Schon wieder Marx. Die Wiederkehr der Revolution</i>.
