Add: Woolcock: Victory for free speech as Cambridge plan defeated

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -2885,6 +2885,13 @@
           My goodness ⁦<a href="https://twitter.com/philosophybites">@philosophybites</a> what in G-d’s name were you thinking?!</q>
           This led to a heated discussion on Twitter.
         </li>
+        <li>Woolcock, Nicola:
+          <a href="https://www.thetimes.co.uk/article/victory-for-free-speech-as-cambridge-plan-defeated-gtnjn0zzw">Victory for free speech as Cambridge plan defeated</a>,
+          <i class="newspaper">The Times</i>, 10.12.2020 (paywalled article).
+          <br />Introductory paragraph:
+          <q>Cambridge University has been forced to drop rules requiring students, lecturers and visitors to “respect” opposing views after overwhelming opposition from academics.</q>
+          <!--Referrer: Steven Pinker, 10.12.2020: https://twitter.com/sapinker/status/1337037126169473025 -->
+        </li>
       </ul>
     </section>
 
