Add: Heinrich: Karl Marx und die Geburt der modernen Gesellschaft, Band 1

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -241,6 +241,11 @@
             * Caldwell, Roger: "Why Marx Was Right by Terry Eagleton", Philosophy Now, 2013: https://philosophynow.org/issues/96/Why_Marx_Was_Right_by_Terry_Eagleton
           -->
         </li>
+        <li><span lang="de">Heinrich, Michael:
+          <i class="booktitle">Karl Marx und die Geburt der modernen Gesellschaft, Band 1. Biographie und Werkentwicklung: 1818-1841</i>. Schmetterling Verlag,</span> 2018. (424 pages)
+          <a href="http://www.schmetterling-verlag.de/page-5_isbn-3-89657-085-4.htm"><abbr>ISBN</abbr> 3-89657-085-4</a>.<!--29,80 EUR gebunden-->
+          <br />This is the first volume of a biography that will eventually span four volumes.
+        </li>
         <li><span lang="de">Nippel, Wilfried:
           <i class="booktitle">Karl Marx</i>. München: C. H. Beck,</span> 2018. (128 pages)
           <a href="https://www.chbeck.de/nippel-karl-marx/product/20530828"><abbr>ISBN</abbr> 978-3-406-71418-4</a>.
