Add: Heinricht: Wie das Marxsche Kapital lesen? Band 1, Band 2

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -212,6 +212,16 @@
           <q>(&hellip;) As a genre, sf is ideally suited to critiquing the present through its explorations of the social and political possibilities of the future.
           This is the first collection to combine analyses of sf literature and films within a broader overview of Marxist theory and critical perspectives on the genre. (&hellip;)</q>
         </li>
+        <li><span lang="de">Heinrich, Michael:
+          <i class="booktitle">Wie das Marxsche Kapital lesen? Band 1. Leseanleitung und Kommentar zum Anfang des «Kapital». Teil 1</i>. Schmetterling Verlag,</span> 2009 (second edition), 2016 (thir edition, 288 pages)
+          <a href="http://www.schmetterling-verlag.de/page-5_isbn-3-89657-084-6.htm"><abbr>ISBN</abbr> 3-89657-084-6</a>.
+          <br />The first of two volumems.
+        </li>
+        <li><span lang="de">Heinrich, Michael:
+          <i class="booktitle">Wie das Marxsche Kapital lesen? Band 2. Leseanleitung und Kommentar zum Anfang des 'Kapital'. Teil 2</i>. Schmetterling Verlag,</span> 2013 (first edition, 204 pages)
+          <a href="http://www.schmetterling-verlag.de/page-5_isbn-3-89657-053-6.htm"><abbr>ISBN</abbr> 3-89657-053-6</a>.
+          <br />The second of two volumems.
+        </li>
         <li>Davis, Mike:
           <i class="booktitle">Old Gods, New Enigmas: Marx’s Lost Theory</i>. Verso, 2018 (320 pages)
           <a href="https://www.versobooks.com/books/2779-old-gods-new-enigmas"><abbr>ISBN</abbr> 9781788732161</a>.
