Add: Rubel: Marx, critique du marxisme

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -198,6 +198,10 @@
           See the Wikipedia article
           <a href="https://en.wikipedia.org/wiki/Marxism_and_Morality">Marxism and Morality</a>.
         </li>
+        <li><span lang="fr">Rubel, Maximilian:
+          <i class="booktitle">Marx, critique du marxisme</i>. Petite Bibliothèque Payot. Payot,</span> 2000. (560 pages)
+          <a href="https://www.payot-rivages.fr/payot/livre/marx-critique-du-marxisme-9782228892964" hreflang="fr"><abbr>ISBN</abbr> 978-2-228-89296-4</a>.
+        </li>
         <li>Shapiro, Stephen:
           <i class="booktitle">How to Read Marx's Capital</i>. How to Read Theory. Pluto Press, 2008. (192 pages)
           <a href="https://www.plutobooks.com/9780745325613/how-to-read-marxs-capital/"><abbr>ISBN</abbr> 9780745325613</a>.
@@ -214,12 +218,12 @@
         </li>
         <li><span lang="de">Heinrich, Michael:
           <i class="booktitle">Wie das Marxsche Kapital lesen? Band 1. Leseanleitung und Kommentar zum Anfang des «Kapital». Teil 1</i>. Schmetterling Verlag,</span> 2009 (second edition), 2016 (thir edition, 288 pages)
-          <a href="http://www.schmetterling-verlag.de/page-5_isbn-3-89657-084-6.htm"><abbr>ISBN</abbr> 3-89657-084-6</a>.
+          <a href="http://www.schmetterling-verlag.de/page-5_isbn-3-89657-084-6.htm" hreflang="de"><abbr>ISBN</abbr> 3-89657-084-6</a>.
           <br />The first of two volumems.
         </li>
         <li><span lang="de">Heinrich, Michael:
           <i class="booktitle">Wie das Marxsche Kapital lesen? Band 2. Leseanleitung und Kommentar zum Anfang des 'Kapital'. Teil 2</i>. Schmetterling Verlag,</span> 2013 (first edition, 204 pages)
-          <a href="http://www.schmetterling-verlag.de/page-5_isbn-3-89657-053-6.htm"><abbr>ISBN</abbr> 3-89657-053-6</a>.
+          <a href="http://www.schmetterling-verlag.de/page-5_isbn-3-89657-053-6.htm" hreflang="de"><abbr>ISBN</abbr> 3-89657-053-6</a>.
           <br />The second of two volumems.
         </li>
         <li>Davis, Mike:
@@ -253,16 +257,17 @@
         </li>
         <li><span lang="de">Heinrich, Michael:
           <i class="booktitle">Karl Marx und die Geburt der modernen Gesellschaft, Band 1. Biographie und Werkentwicklung: 1818-1841</i>. Schmetterling Verlag,</span> 2018. (424 pages)
-          <a href="http://www.schmetterling-verlag.de/page-5_isbn-3-89657-085-4.htm"><abbr>ISBN</abbr> 3-89657-085-4</a>.<!--29,80 EUR gebunden-->
+          <a href="http://www.schmetterling-verlag.de/page-5_isbn-3-89657-085-4.htm" hreflang="de"><abbr>ISBN</abbr> 3-89657-085-4</a>.<!--29,80 EUR gebunden-->
           <br />This is the first volume of a biography that will eventually span four volumes.
+          <!--review: https://www.hsozkult.de/publicationreview/id/reb-27270 -->
         </li>
         <li><span lang="de">Nippel, Wilfried:
           <i class="booktitle">Karl Marx</i>. München: C. H. Beck,</span> 2018. (128 pages)
-          <a href="https://www.chbeck.de/nippel-karl-marx/product/20530828"><abbr>ISBN</abbr> 978-3-406-71418-4</a>.
+          <a href="https://www.chbeck.de/nippel-karl-marx/product/20530828" hreflang="de"><abbr>ISBN</abbr> 978-3-406-71418-4</a>.
         </li>
         <li><span lang="de">Fetscher, Iring:
           <i class="booktitle">Marx. Eine Einführung</i>. Suhrkamp,</span> 2018. (159 pages)
-          <a href="https://www.suhrkamp.de/buecher/marx-iring_fetscher_29855.html"><abbr>ISBN</abbr> 978-3-518-29855-8</a>.
+          <a href="https://www.suhrkamp.de/buecher/marx-iring_fetscher_29855.html" hreflang="de"><abbr>ISBN</abbr> 978-3-518-29855-8</a>.
           <br />
         </li>
         <li>Fusaro, Diago<span lang="de">:
