Escape ampersand in URL

--- a/philosophy/kant.html
+++ b/philosophy/kant.html
@@ -115,7 +115,7 @@
       </li>
       <li>Guyer, Paul (editor):
         <i class="booktitle">The Cambridge Companion to Kant's Critique of Pure Reason</i>. Cambridge Companions to Philosophy. Cambridge University Press, 2010. (476 pages)
-        <a href="http://www.cambridge.org/de/academic/subjects/philosophy/eighteenth-century-philosophy/cambridge-companion-kants-critique-pure-reason?format=PB&isbn=9780521710114"><abbr>ISBN</abbr> 9780521710114</a>.
+        <a href="http://www.cambridge.org/de/academic/subjects/philosophy/eighteenth-century-philosophy/cambridge-companion-kants-critique-pure-reason?format=PB&amp;isbn=9780521710114"><abbr>ISBN</abbr> 9780521710114</a>.
       </li>
       <li><span lang="de">Höffe, Otfried:
         <i class="booktitle">Kants Kritik der praktischen Vernunft. Eine Philosophie der Freiheit</i>. München: C. H. Beck</span>, 2012. (456 pages)
@@ -175,19 +175,6 @@
         <a href="https://de.wikipedia.org/wiki/Die_Metaphysik_der_Sitten"><i class="booktitle" lang="de">Die Metaphysik der Sitten</i></a>
         (1797).
       </li>
-      <!--
-      <li>:
-        <i class="booktitle"></i>. ( pages)
-        <a href=""><abbr>ISBN</abbr> </a>.
-        <br />
-      </li>
-      <li>
-        <a href=""></a>
-      </li>
-      <li>
-        <a href=""><i class="booktitle"></i></a>
-      </li>
-      -->
     </ul>
 
     <h2>Links</h2>
@@ -259,6 +246,24 @@
         </ul>
       </li>
     </ul>
+    <!--
+    <section>
+      <h2></h2>
+      <ul>
+        <li>:
+          <i class="booktitle"></i>. ( pages)
+          <a href=""><abbr>ISBN</abbr> </a>.
+          <br />
+        </li>
+        <li>
+          <a href=""></a>
+        </li>
+        <li>
+          <a href=""><i class="booktitle"></i></a>
+        </li>
+      </ul>
+    </section>
+    -->
   </main>
 
   <footer>
