Add: All’s not well that ends well – why Kant centred morality on motives, not outcomes

--- a/philosophy/kant.html
+++ b/philosophy/kant.html
@@ -207,6 +207,12 @@
         <i class="website">Bundesregierung</i></span>, 02.06.2016.
       </li>
       <li>
+        <a href="https://aeon.co/videos/alls-not-well-that-ends-well-why-kant-centred-morality-on-motives-not-outcomes">All’s not well that ends well – why Kant centred morality on motives, not outcomes</a>,
+        <i class="website">Aeon</i>, 17.12.2020.
+        <br />This is a 55-minute lecture by Michael Sandel at Harvard University.
+        <!--@@see also Justice with Michael Sande: https://justiceharvard.org/ -->
+      </li>
+      <li>
         <a href="https://fivebooks.com/best-books/kant/">The best books on Immanuel Kant recommended by Adrian Moore</a>,
         <i class="website">Five Books</i>, August 2019.
         Adrian Moore, author of <i class="booktitle">The Evolution of Modern Metaphysics</i>, recommends the following books:
@@ -256,7 +262,8 @@
           <br />
         </li>
         <li>
-          <a href=""></a>
+          <a href=""></a>,
+          <i class="website"></i>,
         </li>
         <li>
           <a href=""><i class="booktitle"></i></a>
